spinner for collection_ion_progress

--- a/service-front/app/src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig
+++ b/service-front/app/src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig
@@ -135,6 +135,7 @@
                         <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
                         <strong class="govuk-warning-text__text">
                             <span class="govuk-warning-text__assistive">{% trans %}Warning{% endtrans %}</span>
+                            <div class="iap-loader"></div>
                             {% trans %}
                                 A scanned image of the donor’s preferences will appear here soon
                                 The first time may take up to 10 minutes.
