extra text requested by Jude

--- a/service-front/app/src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig
+++ b/service-front/app/src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig
@@ -150,7 +150,7 @@
                             <span class="govuk-warning-text__assistive">{% trans %}Warning{% endtrans %}</span>
                             <div class="iap-loader"></div>
                             {% trans %}
-                                A scanned image of the donor’s preferences will appear here soon. The first time may take up to 10 minutes.
+                                A scanned image of the donor’s preferences will appear here soon. The first time may take up to 10 minutes. Please refresh this image.
                             {% endtrans %}
                         </strong>
                     </div>
@@ -214,7 +214,7 @@
                         <div class="iap-loader"></div>
                         <span class="govuk-warning-text__assistive">{% trans %}Warning{% endtrans %}</span>
                         {% trans %}
-                            A scanned image of the donor’s instructions will appear here soon. The first time may take up to 10 minutes.
+                            A scanned image of the donor’s instructions will appear here soon. The first time may take up to 10 minutes. Please refresh this image.
                         {% endtrans %}
                     </strong>
                 </div>
