added content UML-2933 - NO Welsh translations

--- a/service-front/app/src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig
+++ b/service-front/app/src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig
@@ -131,13 +131,13 @@
                                 {% trans %}
                                     We cannot show the preferences for this <abbr title="lasting power of attorney">LPA</abbr>.
                                     Until we can fix this problem, you’ll need to show the paper
-                                    <abbr title="lasting power of attorney">LPA</abbr> to anyone who needs to see them.
+                                    <abbr title="lasting power of attorney">LPA</abbr> to anyone who needs to see them. You do not need to contact us. We are aware of this issue.
                                 {% endtrans %}
                             {% elseif application is same as('viewer') %}
                                 {% trans %}
                                     We cannot show the preferences for this <abbr title="lasting power of attorney">LPA</abbr>.
                                     Until we can fix this problem, if you need to see these you’ll need to ask the person who
-                                    gave you the access code to show you the paper <abbr title="lasting power of attorney">LPA</abbr>.
+                                    gave you the access code to show you the paper <abbr title="lasting power of attorney">LPA</abbr>. You do not need to contact us. We are aware of this issue.
                                 {% endtrans %}
                             {% endif %}
                         </strong>
@@ -197,13 +197,13 @@
                             {% trans %}
                                 We cannot show the instructions for this <abbr title="lasting power of attorney">LPA</abbr>.
                                 Until we can fix this problem, you’ll need to show the paper
-                                <abbr title="lasting power of attorney">LPA</abbr> to anyone who needs to see them.
+                                <abbr title="lasting power of attorney">LPA</abbr> to anyone who needs to see them. You do not need to contact us. We are aware of this issue.
                             {% endtrans %}
                         {% elseif application is same as('viewer') %}
                             {% trans %}
                                 We cannot show the instructions for this <abbr title="lasting power of attorney">LPA</abbr>.
                                 Until we can fix this problem, if you need to see these you’ll need to ask the person who
-                                gave you the access code to show you the paper <abbr title="lasting power of attorney">LPA</abbr>.
+                                gave you the access code to show you the paper <abbr title="lasting power of attorney">LPA</abbr>. You do not need to contact us. We are aware of this issue.
                             {% endtrans %}
                         {% endif %}
                     </strong>
