--- a/service-front/app/src/Actor/templates/actor/view-lpa-summary.html.twig
+++ b/service-front/app/src/Actor/templates/actor/view-lpa-summary.html.twig
@@ -119,10 +119,12 @@
                     {% include '@partials/lpa-summary-details/lpa-details.html.twig' %}
 
                     {% if feature_enabled("instructions_and_preferences") and iap_images is defined %}
-                        <div class="govuk-inset-text">
-                            {% trans %}If the scanned image is not readable, organisations may ask to see the paper
-                                LPA so that they can find out what the instructions or preferences are.{% endtrans %}
-                        </div>
+                        {% if iap_images.status is not constant('\\Common\\Entity\\InstructionsAndPreferences\\ImagesStatus::COLLECTION_ERROR') %}
+                            <div class="govuk-inset-text">
+                                {% trans %}If the scanned image is not readable, organisations may ask to see the paper
+                                    LPA so that they can find out what the instructions or preferences are.{% endtrans %}
+                            </div>
+                        {% endif %}
                     {% endif %}
 
                     <p class="govuk-body">
