--- a/service-front/app/src/Common/templates/partials/full-lpa-display.html.twig
+++ b/service-front/app/src/Common/templates/partials/full-lpa-display.html.twig
@@ -116,10 +116,12 @@
                     {% include '@partials/lpa-summary-details/lpa-details.html.twig' %}
 
                     {% if feature_enabled("instructions_and_preferences") and iap_images is defined %}
-                        <div class="govuk-inset-text">
-                            {% trans %}If any scanned images are not readable, ask the person who gave you the access
-                                code to show you the paper LPA{% endtrans %}
-                        </div>
+                        {% if iap_images.status is not constant('\\Common\\Entity\\InstructionsAndPreferences\\ImagesStatus::COLLECTION_ERROR') %}
+                            <div class="govuk-inset-text">
+                                {% trans %}If any scanned images are not readable, ask the person who gave you the access
+                                    code to show you the paper LPA{% endtrans %}
+                            </div>
+                        {% endif %}
                     {% endif %}
 
                     <dl class="govuk-summary-list govuk-summary-list--no-border">
