Uml 2766 Display instruction and preference images to users (#2279)
* Initial DTO setup and unit tests

* Renamed files/classes and added error logging for images requests

* Refactoring edits

* Update mock images for our used dev/test lpas

* Don't show lpa images if the code creation is within the previous 30 days of 4th July.

* Show instruction and preference images to viewers

* Handle continuation sheets a bit better

* Ensure spacing works with multiple images per type.

* PDF's now served with images. Styles may need a tweak.

* Add new test, missing steps.

* PDF service test fixes.

* Behat test fixes for PDF download.

* ++WARNING revert before merge++

Forward date all share codes so that we can test.

* Actor side template changes and translation extract.

* Behat tests to take account of feature flag

* Additional logging for debug purposes.

* Split translatable string a bit better.

* Translations update.

* Move debug log outside the conditional

* Further translation work

* behat tests (steps yet to implement)

* Ensure feature flag is turned on for environment.

* Merge in severance warning changes.

* Logging introduced incorrect type.

* UI test now mocks images coming back from service-api and asserts images appear in page

* Add status variable and set this up in the various steps for collection
complete, error, in_progress

* add getStatus method

* only try to show images if collection complete

* tidy twig

* not pretty yet, WIP, text for collection error or collection in
progress, behat tests modified to check for this text

* add different text for actor vs viewer side in lpa-details twig file

* Initial DTO setup and unit tests

* Renamed files/classes and added error logging for images requests

* Refactoring edits

* Update mock images for our used dev/test lpas

* Don't show lpa images if the code creation is within the previous 30 days of 4th July.

* Show 

--- a/service-front/app/src/Common/templates/partials/full-lpa-display.html.twig
+++ b/service-front/app/src/Common/templates/partials/full-lpa-display.html.twig
@@ -109,23 +109,22 @@
 
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-full">
-                    <h2 class="govuk-heading-l">{% trans %}LPA details{% endtrans %}</h2>
-                    {% if feature_enabled("instructions_and_preferences") %}
-                        {% if (lpa.applicationHasGuidance or lpa.applicationHasRestrictions) and (lpa.registrationDate < date('2019-01-01')) %}
-                            <div class="govuk-warning-text">
-                                <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-                                <strong class="govuk-warning-text__text">
-                                    <span class="govuk-warning-text__assistive">{% trans %}Warning{% endtrans %}</span>
-                                    {% trans %}
-                                        Some words in these instructions or preferences may have been removed by the Court of Protection. If you need to check this, please see the paper
-                                        <abbr title="lasting power of attorney">LPA</abbr>.
-                                    {% endtrans %}
-                                </strong>
+                    <h2 class="govuk-heading-l">
+                        {% trans %}<abbr title="lasting power of attorney">LPA</abbr> details{% endtrans %}
+                    </h2>
+
+                    {% include '@partials/lpa-summary-details/lpa-details.html.twig' %}
+
+                    {% if feature_enabled("instructions_and_preferences") and iap_images is defined %}
+                        {% if iap_images.status is not constant('\\Common\\Entity\\InstructionsAndPreferences\\ImagesStatus::COLLECTION_ERROR') %}
+                            <div class="govuk-inset-text">
+                                {% trans %}If any scanned images are not readable, ask the person who gave you the access
+                                    code to show you the paper LPA{% endtrans %}
                             </div>
                         {% endif %}
                     {% endif %}
+
                     <dl class="govuk-summary-list govuk-summary-list--no-border">
-                        {% include '@partials/lpa-summary-details/lpa-details.html.twig' %}
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">{% trans %}Date summary viewed{% endtrans %}</dt>
                             <dd class="govuk-summary-list__value">{{ lpa_date('today') }}</dd>
@@ -155,4 +154,3 @@
         </div>
     </main>
 </div>
-
