Rejig additional images display

--- a/service-front/app/src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig
+++ b/service-front/app/src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig
@@ -230,20 +230,30 @@
                         {% endfor %}
                     </div>
                 {% endif %}
-                {% set unknown_images = iap_images.getUnknownImageUrls %}
-                {% if (unknown_images | length) > 0 %}
-                    <div class="govuk-summary-list__row">
-                        <dt class="govuk-summary-list__key">{% trans %}Additional Information{% endtrans %}</dt>
-                        <dd class="govuk-summary-list__value">
-                        <div id="unknown_images" class="opg-ip">
-                          {% for url in unknown_images %}
-                              <img class="opg-ip__image" src="{{ url.url }}"
-                                 alt="{% trans %}A scanned copy of the donor’s preferences and/or instructions - the text cannot be digitised at present{% endtrans %}">
-                          {% endfor %}
-                    </div>
-                {% endif %}
             {% endif %}
             <dl class="govuk-summary-list govuk-summary-list--no-border">
+        {% endif %}
+
+        {% if feature_enabled("instructions_and_preferences") and iap_images is defined
+                and iap_images.status is constant('\\Common\\Entity\\InstructionsAndPreferences\\ImagesStatus::COLLECTION_COMPLETE') %}
+            {% set unknown_images = iap_images.getUnknownImageUrls %}
+            {% if (unknown_images | length) > 0 %}
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">{% trans %}Additional Information{% endtrans %}</dt>
+                    <dd class="govuk-summary-list__value"></dd>
+                </div>
+
+                </dl>
+
+                <div id="unknown_images" class="opg-ip">
+                    {% for url in unknown_images %}
+                        <img class="opg-ip__image" src="{{ url.url }}"
+                             alt="{% trans %}A scanned copy of the donor’s preferences and/or instructions - the text cannot be digitised at present{% endtrans %}">
+                    {% endfor %}
+                </div>
+
+                <dl class="govuk-summary-list govuk-summary-list--no-border">
+            {% endif %}
         {% endif %}
     {% endif %}
 </dl>
