Fix issue with unopened DL after warning.

--- a/service-front/app/src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig
+++ b/service-front/app/src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig
@@ -88,6 +88,7 @@
                         {% endtrans %}
                     </strong>
                 </div>
+                <dl class="govuk-summary-list govuk-summary-list--no-border">
             {% elseif lpa.registrationDate < date('2019-01-01') %}
                 </dl>
                 <div class="govuk-warning-text">
