--- a/service-front/app/src/Actor/templates/actor/lpa-blank-dashboard.html.twig
+++ b/service-front/app/src/Actor/templates/actor/lpa-blank-dashboard.html.twig
@@ -37,7 +37,7 @@
                             <ul class="govuk-list govuk-list--bullet">
                                 <li>{% trans %}give organisations access to an online summary of an <abbr title="lasting power of attorney">LPA</abbr> by making a secure access code{% endtrans %}</li>
                                 <li>{% trans %}keep track of the organisations that have online access to an <abbr title="lasting power of attorney">LPA</abbr>{% endtrans %}</li>
-                                <li>{% trans %}view an <abbr title="lasting power of attorney">LPA</abbr> summary{% endtrans %}</li>
+                                <li>{% trans %}view an <abbr title="lasting power of attorney">LPA</abbr> summary{% endtrans %}, including a scanned image of the instructions and preferences if there are any</li>
                                 <li>{% trans %}ask for an activation key if you have not been given one - or it has expired{% endtrans %}</li>
                             </ul>
                         </div>
