--- a/service-front/app/src/Actor/templates/actor/instructions-preferences.html.twig
+++ b/service-front/app/src/Actor/templates/actor/instructions-preferences.html.twig
@@ -25,7 +25,7 @@
                     {% if feature_enabled("instructions_and_preferences") %}
                         <p class="govuk-body">{% trans %}If an <abbr title="lasting power of attorney">LPA</abbr> has instructions or preferences we show a scanned image in the LPA summary.{% endtrans %}
                         </p>
-                        <p class="govuk-body">{% trans %}This scanned image is also shown to anyone you give an access code to. Please check that the scanned image is readable before giving an access code to organisations.{% endtrans %}</p>
+                        <p class="govuk-body">{% trans %}This scanned image is also shown to anyone you give an access code to. Please check that the scanned image is readable before giving an access code to organisations.{F% endtrans %}</p>
                         <p class="govuk-body">{% trans %}Organisations may still ask to see the paper LPA if they would like to check anything.{% endtrans %}</p>
                     {% else %}
 
