removed flags from activation-key twig

--- a/service-front/app/src/Actor/templates/actor/add-lpa/activation-key.html.twig
+++ b/service-front/app/src/Actor/templates/actor/add-lpa/activation-key.html.twig
@@ -8,7 +8,7 @@
     {{ include('@partials/welsh-switch.html.twig') }}
 
     <div role="navigation" aria-labelledby="back-link-navigation">
-        <a href="{{ feature_enabled('use_older_lpa_journey') ? path(back) : path('lpa.dashboard') }}" class="govuk-back-link" id="back-link-navigation">{% trans %}Back{% endtrans %}</a>
+        <a href="{{ path(back) }}" class="govuk-back-link" id="back-link-navigation">{% trans %}Back{% endtrans %}</a>
     </div>
 
     <main class="govuk-main-wrapper" id="main-content" role="main">
