--- a/service-front/app/src/Actor/templates/actor/check-lpa.html.twig
+++ b/service-front/app/src/Actor/templates/actor/check-lpa.html.twig
@@ -7,7 +7,8 @@
         {{ include('@partials/welsh-switch.html.twig') }}
 
         <div role="navigation" aria-labelledby="back-link-navigation">
-            <a href="{{ path('lpa.add-by-key') }}" class="govuk-back-link" id="back-link-navigation">{% trans %}Back{% endtrans %}</a>
+            <a href="{{ path('lpa.add-by-key') }}" class="govuk-back-link" id="back-link-navigation">
+            {% trans %}Back{% endtrans %}</a>
         </div>
 
         <main class="govuk-main-wrapper" id="main-content" role="main">
@@ -72,7 +73,9 @@
                         </strong>
                     </div>
 
-                    <details class="govuk-details" data-module="govuk-details" data-gaEventType="onClick" data-gaAction="Details" data-gaCategory="Wrong Details" data-gaLabel="What to do if the details are wrong">
+                    <details class="govuk-details" data-module="govuk-details" data-gaEventType="onClick"
+                         data-gaAction="Details" data-gaCategory="Wrong Details"
+                         data-gaLabel="What to do if the details are wrong">
                         <summary class="govuk-details__summary">
                             <span class="govuk-details__summary-text">
                                 {% trans %}What to do if the details are wrong{% endtrans %}
@@ -80,7 +83,9 @@
                         </summary>
                         <div class="govuk-details__text">
                             <p>
-                                {% trans %}If the information is wrong, or if a name is misspelt, please call us:{% endtrans %}
+                            {% trans %}
+                                If the information is wrong, or if a name is misspelt, please call us:
+                            {% endtrans %}
                             </p>
                             {{ include('@partials/contact-details/telephone.html.twig', {heading_level: 2 }) }}
                         </div>
@@ -90,7 +95,8 @@
 
                     {{ govuk_form_element(form.get('__csrf')) }}
 
-                    <button data-prevent-double-click="true" type="submit" class="govuk-button">{% trans %}Continue{% endtrans %}</button>
+                    <button data-prevent-double-click="true" type="submit" class="govuk-button">
+                        {% trans %}Continue{% endtrans %}</button>
 
                     <a href="{{ path('lpa.dashboard') }}" role="button" class="govuk-button govuk-button--secondary">
                         {% trans %}Cancel{% endtrans %}
