--- a/service-front/app/src/Actor/templates/actor/check-lpa.html.twig
+++ b/service-front/app/src/Actor/templates/actor/check-lpa.html.twig
@@ -83,9 +83,7 @@
                         </summary>
                         <div class="govuk-details__text">
                             <p>
-                            {% trans %}
-                                If the information is wrong, or if a name is misspelt, please call us:
-                            {% endtrans %}
+                            {% trans %}If the information is wrong, or if a name is misspelt, please call us:{% endtrans %}
                             </p>
                             {{ include('@partials/contact-details/telephone.html.twig', {heading_level: 2 }) }}
                         </div>
