--- a/service-front/app/src/Actor/templates/actor/check-your-answers.html.twig
+++ b/service-front/app/src/Actor/templates/actor/check-your-answers.html.twig
@@ -85,21 +85,13 @@
                         {% endif %}
                     </dl>
 
-                    {% if not feature_enabled('allow_older_lpas') %}
-                        <div class="govuk-warning-text">
-                            <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-                            <strong class="govuk-warning-text__text">
-                                <span class="govuk-warning-text__assistive">{% trans %}Warning{% endtrans %}</span>
-                                {% trans %}These details must match the information we have about you on our records.{% endtrans %}
-                            </strong>
-                        </div>
-                    {% endif %}
-
                     {{ govuk_form_open(form) }}
 
                         {{ govuk_form_element(form.get('__csrf')) }}
 
-                        <button data-prevent-double-click="true" type="submit" class="govuk-button govuk-!-margin-right-1">{% trans %}Continue{% endtrans %}</button>
+                        <button data-prevent-double-click="true" type="submit" class="govuk-button govuk-!-margin-right-1">
+                            {% trans %}Continue{% endtrans %}
+                        </button>
 
                     {{ govuk_form_close() }}
                 </div>
