Fix translation key issues

--- a/service-front/app/src/Actor/templates/actor/lpa-not-found.html.twig
+++ b/service-front/app/src/Actor/templates/actor/lpa-not-found.html.twig
@@ -24,7 +24,7 @@
                         <p class="govuk-body">{% trans %}Date of birth:{% endtrans %} <strong>{{ lpa_date(dob) }}</strong></p>
                         <p class="govuk-body">{% trans %}The date of birth must be for the person the activation key was sent to. For example, if you’re an attorney, you must enter the activation key we sent to you and use your date of birth. If your date of birth is wrong on the LPA, use the date that appears on the paper LPA. If you do not have the LPA, check with the person who does.{% endtrans %}</p>
                         <p class="govuk-body">{% trans %}You must then contact us so we can correct the date on our records.{% endtrans %}</p>
-                        <p class="govuk-body">{% trans %}<abbr title="lasting power of attorney">LPA</abbr> reference number:{% endtrans %} <strong>{{ referenceNumber }}</strong></p>
+                        <p class="govuk-body">{% trans %}<abbr title="lasting power of attorney">LPA</abbr> reference number{% endtrans %}: <strong>{{ referenceNumber }}</strong></p>
                         <p class="govuk-body">{% trans %}If you’re named on more than one LPA, you may have entered the reference number for a different LPA. The letter with the activation key will also have the matching LPA reference number on it.{% endtrans %}</p>
                     </div>
 
