--- a/service-front/app/src/Actor/templates/actor/actor-privacy-notice.html.twig
+++ b/service-front/app/src/Actor/templates/actor/actor-privacy-notice.html.twig
@@ -116,7 +116,7 @@
                 <p class="govuk-body">
                     {% trans %}We’re not responsible for how personal data, accessed by a third party using a code created by a donor or attorney, is used, shared, or held.{% endtrans %}
                 </p>
-                <h2 class="govuk-heading-m">How we store data</h2>
+                <h2 class="govuk-heading-m">{% trans %}How we store data{% endtrans %}</h2>
                 <p class="govuk-body">
                     {% trans %}Information you enter into the service is stored in a secure database within the European Economic Area (EEA).
                     However, due to the global nature of the internet, the data sent to and from the database may transit through countries outside of the EEA.
