Add missing translations that have been found.

--- a/service-front/app/src/Common/templates/partials/full-lpa-display.html.twig
+++ b/service-front/app/src/Common/templates/partials/full-lpa-display.html.twig
@@ -119,7 +119,7 @@
                         {% if iap_images.status is not constant('\\Common\\Entity\\InstructionsAndPreferences\\ImagesStatus::COLLECTION_ERROR') %}
                             <div class="govuk-inset-text">
                                 {% trans %}If any scanned images are not readable, ask the person who gave you the access
-                                    code to show you the paper LPA{% endtrans %}
+                                    code to show you the paper LPA.{% endtrans %}
                             </div>
                         {% endif %}
                     {% endif %}
