new content and translation added

--- a/service-front/app/src/Actor/templates/actor/instructions-preferences.html.twig
+++ b/service-front/app/src/Actor/templates/actor/instructions-preferences.html.twig
@@ -31,7 +31,7 @@
                             {% trans %}
                                 This scanned image is also shown to anyone you give an access code to. Please check that
                                 the scanned image is readable before giving an access code to organisations. This will
-                                work for all access codes made after 4 July 2023.
+                                work for all access codes made after 4 July 2023. This will work for all access codes made after 4 July 2023.
                             {% endtrans %}</p>
                         <p class="govuk-body">
                             {% trans %}
