--- a/service-front/app/src/Actor/templates/actor/instructions-preferences.html.twig
+++ b/service-front/app/src/Actor/templates/actor/instructions-preferences.html.twig
@@ -31,18 +31,21 @@
                             {% trans %}
                                 This scanned image is also shown to anyone you give an access code to. Please check that
                                 the scanned image is readable before giving an access code to organisations. This will
-                                work for all access codes made after 4 July 2023. This will work for all access codes made after 4 July 2023.
-                            {% endtrans %}</p>
+                                work for all access codes made after 4 July 2023.
+                            {% endtrans %}
+                        </p>
                         <p class="govuk-body">
                             {% trans %}
                                 Organisations may still ask to see the paper LPA if they would like to check anything.
-                            {% endtrans %}</p>
+                            {% endtrans %}
+                        </p>
                     {% else %}
                         <p class="govuk-body">
                             {% trans %}
                                 If an <abbr title="lasting power of attorney">LPA</abbr> has instructions or preferences
                                 we cannot show these online.
-                            {% endtrans %}</p>
+                            {% endtrans %}
+                        </p>
                         <p class="govuk-body">
                             {% trans %}
                                 Organisations may ask to see the paper <abbr title="lasting power of attorney">LPA</abbr>
