attempt to import macros and call macro in another template

--- a/service-front/app/src/Actor/templates/actor/lpa-dashboard.html.twig
+++ b/service-front/app/src/Actor/templates/actor/lpa-dashboard.html.twig
@@ -4,11 +4,7 @@
 
 {% block content %}
     <div class="govuk-width-container">
-        {{ include('@partials/account-bar.html.twig') }}
-
-        <div class="govuk-clearfix">
-            {{ include('@partials/welsh-switch.html.twig') }}
-        </div>
+        {{ macros.partials() }}
 
         <main class="govuk-main-wrapper" id="main-content" role="main">
             {{ include('@actor/partials/flash-message.html.twig', {flash_obj: flash, flash_key:'Actor\\Handler\\CheckLpaHandler::ADD_LPA_FLASH_MSG'}) }}
