--- a/service-admin/web/templates/stats.page.gohtml
+++ b/service-admin/web/templates/stats.page.gohtml
@@ -14,6 +14,7 @@
       <thead class="govuk-table__head">
         <tr class="govuk-table__row">
           <th scope="col" class="govuk-table__header"></th>
+          <th scope="col" class="govuk-table__header">3 months previous</th>
           <th scope="col" class="govuk-table__header">2 months previous</th>
           <th scope="col" class="govuk-table__header">Previous Month</th>
           <th scope="col" class="govuk-table__header">Current Month</th>
@@ -36,6 +37,7 @@
       <thead class="govuk-table__head">
         <tr class="govuk-table__row">
           <th scope="col" class="govuk-table__header"></th>
+          <th scope="col" class="govuk-table__header">3 months previous</th>
           <th scope="col" class="govuk-table__header">2 months previous</th>
           <th scope="col" class="govuk-table__header">Previous Month</th>
           <th scope="col" class="govuk-table__header">Current Month</th>
@@ -58,6 +60,7 @@
       <thead class="govuk-table__head">
         <tr class="govuk-table__row">
           <th scope="col" class="govuk-table__header"></th>
+          <th scope="col" class="govuk-table__header">3 months previous</th>
           <th scope="col" class="govuk-table__header">2 months previous</th>
           <th scope="col" class="govuk-table__header">Previous Month</th>
           <th scope="col" class="govuk-table__header">Current Month</th>
@@ -74,6 +77,7 @@
       <thead class="govuk-table__head">
         <tr class="govuk-table__row">
           <th scope="col" class="govuk-table__header"></th>
+          <th scope="col" class="govuk-table__header">3 months previous</th>
           <th scope="col" class="govuk-table__header">2 months previous</th>
           <th scope="col" class="govuk-table__header">Previous Month</th>
           <th scope="col" class="govuk-table__header">Current Month</th>
