--- a/service-front/app/src/Common/templates/layout/default.html.twig
+++ b/service-front/app/src/Common/templates/layout/default.html.twig
@@ -1,5 +1,3 @@
-{% import "macros.twig" as macros %}
-
 <!DOCTYPE html>
 <html lang="{{ currentLocale }}" class="govuk-template ">
 <head>
@@ -113,7 +111,9 @@
     </div>
 </header>
 
+{{ include("@partials/headers-common.html.twig") }}
 {% block content %}{% endblock %}
+{{ include("@partials/footers-common.html.twig") }}
 
 <footer class="govuk-footer " role="contentinfo">
     <div class="govuk-width-container ">
