--- a/service-front/app/src/Common/templates/partials/footers-common.html.twig
+++ b/service-front/app/src/Common/templates/partials/footers-common.html.twig
@@ -1,7 +1,11 @@
-<div class="govuk-width-container">
-    {% if application == "actor"  %}
-      {{ include('@actor/partials/new-use-service.html.twig') }}
-    {% else %}
-        {{ include('@viewer/new-view-service.html.twig') }}
+{% block footers_common %}
+    {% if not forDownload|default(false) %}
+        <div class="govuk-width-container">
+            {% if application == "actor" %}
+              {{ include('@actor/partials/new-use-service.html.twig') }}
+            {% else %}
+                {{ include('@viewer/new-view-service.html.twig') }}
+            {% endif %}
+        </div>
     {% endif %}
-</div>
+{% endblock %}
