--- a/service-front/app/src/Actor/templates/actor/change-details.html.twig
+++ b/service-front/app/src/Actor/templates/actor/change-details.html.twig
@@ -33,7 +33,7 @@
                         <li>{% trans %}the donor or an attorney has moved house{% endtrans %}</li>
                         <li>{% trans %}the donor or an attorney has changed their name{% endtrans %}</li>
                         <li>{% trans %}the donor's or an attorney's name or address is misspelt{% endtrans %}</li>
-                        <li>{% trans %}a date of birth is wrong{% endtrans %}</li>
+                        <li>{% trans %}an attorneys date of birth is wrong{% endtrans %}</li>
                         {% if actorToken != 'null' %}
                             <li><a class="govuk-link" href="{{ path('lpa.death-notification', {}, {'lpa': actorToken}) }}">{% trans %}the donor or an attorney dies{% endtrans %}</a></li>
                         {% else %}
