--- a/service-front/app/src/Viewer/templates/viewer/enter-code.html.twig
+++ b/service-front/app/src/Viewer/templates/viewer/enter-code.html.twig
@@ -9,6 +9,9 @@
     </div>
 
     <main class="govuk-main-wrapper" id="main-content" role="main">
+        {# {{ include('@actor/partials/service-downtime.html.twig') }} #}
+        {{ include('@actor/partials/service-downtime.html.twig') }} {# delete when over #}
+
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-two-thirds">
 
