Updated error message text.

--- a/service-front/app/src/Viewer/templates/viewer/partials/service-downtime.html.twig
+++ b/service-front/app/src/Viewer/templates/viewer/partials/service-downtime.html.twig
@@ -6,7 +6,9 @@
     </div>
     <div class="govuk-notification-banner__content">
         <p class="govuk-notification-banner__heading">
-            {% trans %}This service currently can not show LPA summaries where there are instructions or preferences. We apologise for any inconvenience this may cause and are working to get this up and running again as soon as possible.{% endtrans %}
+            {% trans %}We are currently having problems showing LPA summaries for LPAs with preferences and
+                instructions. Those without are working as expected. We are looking into the problem as a matter of
+                urgency and hope to have the full service back up shortly.{% endtrans %}
         </p>
     </div>
 </div>
