--- a/service-front/app/src/Viewer/templates/viewer/partials/service-downtime.html.twig
+++ b/service-front/app/src/Viewer/templates/viewer/partials/service-downtime.html.twig
@@ -6,9 +6,10 @@
     </div>
     <div class="govuk-notification-banner__content">
         <p class="govuk-notification-banner__heading">
-            {% trans %}We are currently having problems showing LPA summaries for LPAs with preferences and
-                instructions. Those without are working as expected. We are looking into the problem as a matter of
-                urgency and hope to have the full service back up shortly.{% endtrans %}
+            {% trans %}We are currently having problems displaying LPA summaries that include preferences and
+                instructions, this means you can't see the LPA summary. Those that do not have preferences and
+                instructions can be seen in full. We are looking into the problem as a matter of urgency and hope to
+                have the full service back up shortly.{% endtrans %}
         </p>
     </div>
 </div>
