--- a/service-front/app/src/Actor/templates/actor/lpa-dashboard.html.twig
+++ b/service-front/app/src/Actor/templates/actor/lpa-dashboard.html.twig
@@ -14,8 +14,7 @@
             {{ include('@actor/partials/flash-message.html.twig', {flash_obj: flash, flash_key:'Actor\\Handler\\CheckLpaHandler::ADD_LPA_FLASH_MSG'}) }}
             {{ include('@actor/partials/flash-message.html.twig', {flash_obj: flash, flash_key:'Actor\\Handler\\RemoveLpaHandler::REMOVE_LPA_FLASH_MSG'}) }}
 
-            {# {{ include('@actor/partials/service-downtime.html.twig') }} #}
-            {{ include('@actor/partials/service-downtime.html.twig') }} {# delete when over #}
+            {{ include('@actor/partials/service-message.html.twig') }}
 
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-full">
